# tidal-mcp

./: .bandit  .bandit.yaml  .coderabbit.yaml  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  ARCHITECTURE_ANALYSIS_TEST_FAILURE.md  LICENSE  PRODUCTION_ARCHITECTURE.md  README.md  RUN_WITH_UVX.md  SECURITY.md  TEST_SUMMARY.md  coverage.json  fix_test_calls.py  pyproject.toml  pytest.ini  requirements.txt  run_server_tests.py  run_tests.py  run_tests_quick.py  test_coverage_summary.py  test_uvx.sh  validate_tests.py
.github/: BRANCH_PROTECTION.md  CI_CD_SETUP.md  SECURITY.md  STATUS_BADGES.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  pr.yml  quality.yml  release.yml
.tmp/: FINAL_VALIDATION_REPORT.md  IMMEDIATE_ACTION_PLAN.md  PHASE_1_COMPLIANCE_CERTIFICATION.md  TEST_INFRASTRUCTURE_SUCCESS_REPORT.md  TEST_VALIDATION_REPORT.md  bulk_fix_service_tests.py  ci-dependency-analysis.md  compliance_and_metrics_plan.md  conftest_template.py  coverage_verification_report.md  data_architecture_design.md  fastmcp-integration-fix-summary.md  final_coverage_summary.md  fix_service_tests.py  import_isolation_summary.md  integration_deployment_guide.md  integration_test_summary.md  mock_fixes.py  pyproject_test_dependencies.toml  pytest-implementation-summary.md  pytest_ini_template.ini  security_audit_report.md  security_fixes_summary.md  security_validation.py  setup_test_framework.py  storage_implementation_plan.md  test_examples.py  test_fixes.txt  test_fixes_summary.md  test_framework_architecture.md  test_implementation_roadmap.md  unit_test_summary.md  verification_report.md
.tmp/plans/production_ready/: README.md  comprehensive-documentation-plan.md  phase_1_pr_1_test_infrastructure.md  phase_1_pr_2_error_handling.md  phase_1_pr_3_rate_limiting.md  phase_1_pr_4_security_hardening.md  phase_2_pr_1_streaming_urls.md  phase_2_pr_2_session_management.md  phase_3_pr_1_cicd_pipeline.md  phase_3_pr_2_package_distribution.md  phase_4_pr_1_documentation.md  phase_4_pr_2_examples_integration.md  phase_4_pr_3_final_release.md  prd.md  production-readiness-strategic-plan.md  production_readiness_requirements.md  wave_analysis.md
api-contracts/: error-taxonomy.yaml  mcp-integration-patterns.yaml  production-implementation-guide.md  rate-limiting-strategy.yaml  tidal-mcp-api.yaml  versioning-strategy.yaml
docs/: BRANCH_PROTECTION_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  PRODUCTION_TASK_BREAKDOWN.md  RUN_WITH_UVX.md  TEST_INFRASTRUCTURE_DOCUMENTATION.md
docs/architecture/: TECHNICAL_ARCHITECTURE.md
examples/: README.md  auth_example.py  example_usage.py  favorites_and_recommendations_examples.py  playlist_management_examples.py  search_examples.py
src/tidal_mcp/: __init__.py  __main__.py  auth.py  auth.py.bak  models.py  server.py  service.py  service.py.bak  utils.py
src/tidal_mcp/production/: enhanced_tools.py  middleware.py
tests/: COVERAGE_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  README.md  README_test_server.md  __init__.py  conftest.py  mock_tidal_server.py  requirements-test.txt  run_integration_tests.py  test_auth.py  test_auth_comprehensive.py  test_auth_focused.py  test_auth_targeted.py  test_basic_coverage.py  test_coverage_boost.py  test_error_handling.py  test_integration.py  test_models.py  test_performance.py  test_production.py  test_security.py  test_server.py  test_server_comprehensive.py  test_server_simple.py  test_service.py  test_service_complete.py  test_service_comprehensive.py  test_service_real_implementation.py  test_service_simple.py  test_utils.py  test_utils_comprehensive.py
tests/e2e/: test_sample_e2e.py
tests/integration/: README.md  conftest.py  test_critical_flows.py  test_e2e_flows.py  test_helpers.py  test_mcp_protocol.py  test_mcp_tools_core.py  test_mcp_tools_production.py  test_performance.py  test_sample_integration.py
tests/unit/: test_sample_unit.py
